cmake_minimum_required(VERSION 2.8)
set(SRC_LIST main.cpp KafkaWrapper.cpp tele_db.cpp)
add_definitions(-g -fPIC)
include_directories(/usr/local/include/db /usr/local/include/librdkafka /usr/local/include/zdb)
#add_library(tele SHARED ${SRC_LIST})
#set_target_properties(store PROPERTIES VERSION 1.1)
LINK_DIRECTORIES(/home/panghao/libs /usr/local/lib /usr/local/ssl/lib)
add_executable(telestore ${SRC_LIST})
target_link_libraries(telestore z jsoncpp ssl crypto rdkafka pacsdbpool zdb glog pthread)
